Initial work adding statics Fix up headings, spacing and routing

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -86,13 +86,14 @@ body {
 
 h1, h2, h3, h4, h5, h6, p {
 	margin-top: 0;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 }
 
 hr {
 	height: 0;
 	border: 0;
-	border-bottom: 1px solid var(--color-light-gray);
+	margin-top: 0;
+	border-bottom: solid 1px #aaa;
 }
 
 a {
@@ -131,6 +132,10 @@ a:hover, a:focus {
 	align-items: center;
 }
 
+.spacer {
+	margin-bottom: 15px;
+}
+
 .no-margin {
 	margin: 0;
 }
@@ -165,7 +170,7 @@ label {
 }
 
 label~input, label~select {
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 }
 
 button {
@@ -476,7 +481,7 @@ div.editor {
 	font-size: 60px;
 }
 
-.check-list > .check-item {
+.check-list > .check-item, .static-list > .static-item {
 	padding: 6px 10px;
 	border-radius: 4px;
 	font-size: 18px;
@@ -489,7 +494,9 @@ div.editor {
 	animation-duration: 500ms;
 }
 
-.check-list > .check-item:hover {
+.check-list > .check-item:hover, .static-list > .static-item:hover {
 	/* animation messing with this, so apply !important */
 	background-color: #ffffff73!important;
 }
+
+/* STATICS */ 
